Closed Bug 352295 Opened 18 years ago Closed 18 years ago

nsSVGUtils::GetCoordContextProvider leaks

Categories

(Core :: SVG, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: memory-leak)

Attachments

(1 file)

The following code leaks: 900 already_AddRefed<nsSVGCoordCtxProvider> 901 nsSVGUtils::GetCoordContextProvider(nsSVGElement *aElement) ... 910 nsSVGCoordCtxProvider *ctx; 911 CallQueryInterface(owner, &ctx); 912 913 NS_IF_ADDREF(ctx); 914 return ctx; Since the QI adds a ref, and then we manually addref. Steps to reproduce: 1) Enable XPCOM leak logging 2) Load https://bugzilla.mozilla.org/attachment.cgi?id=224965 3) Observe the leaks of SVG stuff.
Attached patch FixSplinter Review
Attachment #237929 - Flags: superreview?(roc)
Attachment #237929 - Flags: review?(tor)
Attachment #237929 - Flags: review?(tor) → review+
Attachment #237929 - Flags: superreview?(roc) → superreview+
Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: