Fix leak in nsSVGUtils::GetCoordContextProvider.  Bug 352295, r=tor, sr=roc