layout/svg/base/src/nsSVGUtils.cpp
@@ -910,7 +910,6 @@ nsSVGUtils::GetCoordContextProvider(nsSVGElement *aElement)
   nsSVGCoordCtxProvider *ctx;
   CallQueryInterface(owner, &ctx);
 
-  NS_IF_ADDREF(ctx);
   return ctx;
 }
 
